--- a/src/Contenedores_Padres/Estilos_Padres/Header.css
+++ b/src/Contenedores_Padres/Estilos_Padres/Header.css
@@ -11,7 +11,7 @@
   z-index: 1000;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-end;
   padding: 0 2rem;
 }
 
